# recommendation_pipeline

./: .gitignore  README.md  app.py  arguments.py  config.py  main.py  pyproject.toml  recommender_service.py  template.py  test.py  tester.ipynb
dataloader/: __init__.py  dataloader.py
dataset/: __init__.py  ae_dataset.py  make_interaction_data.py  model_dataset.py  read_raw_data.py
model/: __init__.py  autoencoder.py  ease.py
recommender/: arguments.py  template.py  util.py
recommender/checkpoint/: config.json  vocab.json
recommender/configs/: config.yaml
recommender/configs/criterion/: ce.yaml  mse.yaml
recommender/configs/data/: data_source.yaml
recommender/configs/dataloader/: pytorch_dataloader.yaml
recommender/configs/dataset/: ease.yaml
recommender/configs/model/: autoencoder.yaml  ease.yaml
recommender/configs/optimizer/: adam.yaml  sgd.yaml
recommender/configs/runner/: autoencoder.yaml
recommender/dataloader/: __init__.py  dataloader.py
recommender/dataset/: __init__.py
recommender/dataset/collect/: __init__.py  base.py  datasource.py
recommender/dataset/preprocess/: __init__.py  base.py  interaction_dataset.py  model_dataset.py
recommender/generator/: autoencoder.py
recommender/model/: __init__.py  autoencoder.py  autoencoder_si.py  ease.py  vae.py
recommender/runner/: __init__.py  base.py  metric.py  trainer.py
router/: autoencoder_inference.py
runner/: __init__.py  trainer.py
test/: test_call_hydra.py
