[tool.poetry]
name = "recommender app service"
version = "0.1.0"
description = "앱 서버 배포를 위한 pipeline 구축"
authors = ["zzakjista <gnsdl09@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "2.2.0"
numpy = "1.26.4"
scipy = "1.12.0"
tqdm = "4.66.2"
torch = {version = "^2.3.1+cu118", source = "pytorch-gpu"}
torchvision = {version = "^0.18.1+cu118", source = "pytorch-gpu"}
torchaudio = {version = "^2.3.1+cu118", source = "pytorch-gpu"}
requests = "2.31.0"
pyarrow = "16.0.0"
fastapi = "0.111.0"
pydantic = "2.7.1"
uvicorn = "0.29.0"
pyjwt = "2.8.0"
aiofiles = "23.2.1"
psutil = "5.9.8"
bentoml = "^1.2.19"


[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
